--- a/healthdiagnosis/templates/developer.html
+++ b/healthdiagnosis/templates/developer.html
@@ -127,7 +127,7 @@
               <a class="nav-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a class="nav-link" href="/profile">Profile</a>
             </li>
           </ul>
         </div>
