--- a/healthdiagnosis/templates/blog.html
+++ b/healthdiagnosis/templates/blog.html
@@ -142,7 +142,7 @@
               <a class="nav-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a class="nav-link" href="/profile">Profile</a>
             </li>
           </ul>
         </div>
