--- a/healthdiagnosis/templates/index.html
+++ b/healthdiagnosis/templates/index.html
@@ -110,8 +110,11 @@
               <a class="nav-link" href="/blog">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Logout</a>
+              <a class="nav-link" href="/profile">Profile</a>
             </li>
+            {% comment %} {% if user.is_authenticated %}
+                <li><a href="{% url 'profile' %}">Profile</a></li>  <!-- Add this line -->
+            {% endif %} {% endcomment %}
           </ul>
         </div>
       </div>
