--- a/healthdiagnosis/templates/landing_page.html
+++ b/healthdiagnosis/templates/landing_page.html
@@ -9,7 +9,7 @@
         font-family: "Arial", sans-serif;
         margin: 0;
         padding: 0;
-        background-image: url("assets\landing-page.png");
+        background-image: url("../assets/landing-page.png");
         background-size: cover;
         background-position: center;
         display: flex;
