--- a/healthdiagnosis/templates/index.html
+++ b/healthdiagnosis/templates/index.html
@@ -63,7 +63,7 @@
       }
       /* Footer Styles */
       footer {
-        background-color: #1a1a1a; /* Dark background for footer */
+        background-color: #1a1a1a; 
         color: #fff;
         padding: 20px;
         text-align: center;
@@ -73,10 +73,9 @@
         margin: 0;
       }
       footer a {
-        color: white; /* Ensuring footer links are white */
+        color: white; 
       }
 
-      /* Responsive Styling */
       @media (max-width: 768px) {
         h2 {
           font-size: 28px;
@@ -960,6 +959,12 @@
             </div>
             {% comment %} <button type="button" id="startSpeechRecognition" class="btn btn-primary mb-3 rounded-pill">Start Speech Recognition</button> {% endcomment %}
             <div id="transcription" class="mb-4"></div>
+          
+            {% if symptoms %}
+                <p>Your symptoms are: {{ symptoms }}</p>
+            {% endif %}
+            
+            <div id="transcription" class="mb-4"></div>
 
             {% if message %}
             <p>{{ message }}</p>
@@ -969,12 +974,6 @@
 
             {% if message2 %}
             <p>{{ message2 }}</p>
-            {% endif %}
-              
-            <div id="transcription" class="mb-4"></div>
-          
-            {% if symptoms %}
-                <p>Your symptoms are: {{ symptoms }}</p>
             {% endif %}
             
             <button type="submit" class="btn btn-danger btn-lg w-100 py-3">Predict</button>
