--- a/healthdiagnosis/templates/landing_page.html
+++ b/healthdiagnosis/templates/landing_page.html
@@ -58,6 +58,10 @@
         opacity: 0; /* Start hidden for animation */
         animation-delay: 0.5s; /* Delay for a staggered effect */
       }
+      .content{
+        text-align: center;
+        color: rgb(247, 249, 251);
+      }
       @keyframes fadeInUp {
         from {
           transform: translateY(20px);
@@ -102,7 +106,7 @@
         position: absolute;
         bottom: 20px;
         font-size: 0.9em;
-        color: #555;
+        color: #fffefe;
         animation: fadeIn 2s; /* Fade in effect for footer */
       }
       @media (max-width: 768px) {
@@ -116,7 +120,8 @@
     </style>
   </head>
   <body>
-    <h1>Welcome to MedifAI</h1>
+    <div class="content">
+      <h1>Welcome to MedifAI</h1>
     <p>
       Your personalized medicine recommendation system that helps you find the
       best treatments tailored to your unique health needs. Explore a world of
@@ -127,6 +132,9 @@
       connect with healthcare professionals at your convenience.
     </p>
     <a href="/signup/">Login or SignUp</a>
+    </div>
+    
+    
 
     <div class="footer">&copy; 2024 MedifAI. All rights reserved.</div>
   </body>
