--- a/healthdiagnosis/templates/contact.html
+++ b/healthdiagnosis/templates/contact.html
@@ -12,10 +12,8 @@
       body, html {
         height: 100%;
         margin: 0;
-        
         font-family: 'Arial', sans-serif;
         background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
-        background-image: url("{% static 'assets/contact-page.png' %}");
         color: #333;
       }
 
@@ -49,8 +47,8 @@
       .content {
         flex: 1;
         padding: 60px 20px;
-        background: rgb(38, 36, 36);
-        color: white;
+        color: black;
+        background: white;
         margin: 30px auto;
         border-radius: 15px;
         max-width: 1000px;
@@ -58,20 +56,19 @@
       }
       h2 {
         font-size: 32px;
-        color: #f6f9fa;
+        color: black;
         margin-bottom: 20px;
       }
       p {
         font-size: 18px;
         line-height: 1.6;
         margin-bottom: 15px;
-        color: #fefdfd;
+        color: black;
       }
 
       /* Form Styles */
       .contact-form {
         margin-top: 30px;
-        background: rgb(37, 36, 36);
         color: white;
       }
       .form-control, .form-control:focus {
@@ -80,7 +77,7 @@
       }
       .form-label {
         font-weight: bold;
-        color: white;
+       
       }
 
       /* Footer Styles */
