--- a/healthdiagnosis/templates/login.html
+++ b/healthdiagnosis/templates/login.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,10 +15,14 @@
             box-sizing: border-box;
         }
         body {
-            background-color: #080710;
-            font-family: 'Poppins', sans-serif;
+            background-image: url("{% static 'assets/signup-page.png' %}");
+            background-size: cover;  
+            background-position: center; 
+            background-repeat: no-repeat;  
+            height: 100vh; ;
         }
         .background {
+            
             width: 430px;
             height: 520px;
             position: absolute;
@@ -30,35 +36,7 @@
             position: absolute;
             border-radius: 50%;
         }
-        
-        /* Shape 1: Top-left */
-        .shape-1 {
-            background: linear-gradient(#1845ad, #23a2f6);
-            top: -80px;
-            left: -150px;
-        }
-        
-        /* Shape 2: Top-right */
-        .shape-2 {
-            background: linear-gradient(#ff512f, #f09819);
-            top: -80px;
-            right: -150px;
-        }
-        
-        /* Shape 3: Bottom-left */
-        .shape-3 {
-            background: linear-gradient(to right, #ff512f, #f09819);
-            bottom: -80px;
-            left: -150px;
-        }
-        
-        /* Shape 4: Bottom-right */
-        .shape-4 {
-            background: linear-gradient(to right, #1845ad, #23a2f6);
-            bottom: -80px;
-            right: -150px;
-        }
-
+    
         form {
             height: 450px;
             width: 450px;
