--- a/healthdiagnosis/templates/home.html
+++ b/healthdiagnosis/templates/home.html
@@ -28,22 +28,33 @@
             color: white;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 7rem;
             color: #f5f6f7;
             margin-bottom: 20px;
         }
+        .butt{
+            display: flex;
+            justify-content: center;  /* Aligns horizontally */
+            align-items: center;  
+            gap: 20px;    /* Aligns vertically */
+            
+        }
 
         .btn-custom {
+            
+            text-align: center;
+            margin-top: 25vh;
+            
             background-color: #3498db;
             border: none;
             color: white;
             padding: 10px 20px;
             font-size: 1.2rem;
             border-radius: 5px;
-            margin: 10px;
             transition: background-color 0.3s ease;
         }
 
@@ -71,6 +82,8 @@
         </div>
         {% endif %}
         <h1>Welcome to MedifAI</h1>
+    </div>
+    <div class ="butt">
         <a href="{% url 'medifai' %}" class="btn btn-custom">Go to MedifAI</a>
         <a href="{% url 'logout' %}" class="btn btn-custom">Logout</a>
     </div>
