--- a/healthdiagnosis/templates/index.html
+++ b/healthdiagnosis/templates/index.html
@@ -26,7 +26,7 @@
       }
 
       .navbar-brand {
-        font-size: 24px;
+        font-size: 30px;
         font-weight: bold;
         color: #fff !important;
       }
@@ -44,6 +44,10 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+      }
+      h1{
+        margin-top: -80px;
+        font-size:100px;
       }
       .content {
         flex: 1;
@@ -965,7 +969,7 @@
             <div id="transcription" class="mb-4"></div>
           
             {% if symptoms %}
-                <p class="text-warning"> Your symptoms are: {{ symptoms }}</p>
+                <p class="text-warning", style=" background-color: #343a40;  text-align: center;"> Your symptoms are: {{ symptoms }}</p>
             {% endif %}
             
             <div id="transcription" class="mb-4"></div>
@@ -989,7 +993,7 @@
         {% if predicted_disease %}
         <!-- Results Section -->
         <div class="container my-5">
-          <h2 class="text-center my-4 text-white"> Our AI System Results</h2>
+          <h2 class="text-center my-4 text-white" > Our AI System Results</h2>
           <div class="d-flex justify-content-center flex-wrap">
             <button class="toggle-button" onclick="showModal('diseaseModal')" style="background: #F39334;">Disease</button>
             <button class="toggle-button" onclick="showModal('descriptionModal')" style="background: #268AF3;">Description</button>
